deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix-app
  namespace: kubevirt-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phoenix-app
  template:
    metadata:
      labels:
        app: phoenix-app
    spec:
      containers:
        - name: phoenix
          image: hsduiii/kubevirt_tools:nightly
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
