deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix-service
  namespace: kubevirt-tools
spec:
  selector:
    app: phoenix-app
  ports:
    - name: http
      port: 80
      targetPort: 4000
  type: ClusterIP
