deploy/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubevirt-tools-route
  namespace: kubevirt-tools
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: kubevirt-tools-service
    weight: 100
